Fix button icon vertical alignment
The Materialize Framework increased the font-size, but used the same line-height. This fix makes the font-size for the icon inherited.

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -231,6 +231,14 @@ span.badge.new::after {
 	}
 }
 
+.btn i,
+.btn-large i,
+.btn-floating i,
+.btn-large i,
+.btn-flat i {
+	font-size: inherit;
+}
+
 i.left {
 	margin-right: 0.5rem;
 }
